# modern-cmake

./: CMakeLists.txt
cmake/: FactConfig.cmake.in
src/: CMakeLists.txt
test/: CMakeLists.txt
